# chatbot_spec

./: .gitignore  CLAUDE.md  FINAL_IMPLEMENTATION_STATUS.md  PHASES_5-9_IMPLEMENTATION.md  PHASE_4_COMPLETE.md  QUICK_START.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md
backend/: .dockerignore  .env.example  README.md  TESTING_GUIDE.md  add_tenant_permissions.py  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  seed_test_data.py  setup.sh  start_server.bat  start_server.sh  test_api.py  test_chat_api.py  test_server.py
backend/alembic/: env.py
backend/alembic/versions/: 20251028_001_initial_schema.py  20251028_002_seed_data.py
backend/src/: config.py  main.py
backend/src/api/: chat.py  sessions.py
backend/src/api/admin/: __init__.py  agents.py  knowledge.py  tenants.py  tools.py
backend/src/middleware/: auth.py  logging.py
backend/src/models/: agent.py  base.py  base_tool.py  llm_model.py  message.py  output_format.py  permissions.py  session.py  tenant.py  tenant_llm_config.py  tool.py
backend/src/schemas/: admin.py  chat.py
backend/src/services/: cache_service.py  checkpoint_service.py  domain_agents.py  llm_manager.py  rag_service.py  supervisor_agent.py  tool_loader.py
backend/src/tools/: base.py  http.py  rag.py
backend/src/utils/: encryption.py  formatters.py  jwt.py  logging.py
backend/tests/: test_chat_api_tenant.py
backend/tests/AgentHub Multi-Agent Chatbot Framework/: Root.bru  bruno.json
backend/tests/AgentHub Multi-Agent Chatbot Framework/admin-agents/: Create Agent.bru  Get Agent.bru  List Agents.bru  (+2 more)
(+25 files in other folders)
